--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
       Experienced Software Engineer, Senior Systems Analyst, Technical Support Engineer, Computer Programmer, Linux, and
       Unix System Administrator.
     </p>
-    <!--
     <p>
       I am a Software Developer with experience in ServiceNow administration, implementation, and integration.
       Previously I graduated from the Florida Institute of Technology with a master's degree in computer information
-      systems in December 2016. I continued with doctoral studies at Colorado Technical University after my master’s
+      systems in December 2016. I continued with doctoral studies at Colorado Technical University i Computer Scienceafter my master’s
       degree.
       </p>
+      <!--
       <p>
       After working as a system administrator and technical support engineer for several years, I decided to shift my
       career to software development. Since shifting careers, I have worked on several projects and gained valuable
@@ -79,7 +79,6 @@
       * Strong oral and written communication skills
     </p>
 -->
-
   </section>
 
   
@@ -88,35 +87,254 @@
     <h2 class="projects-title">Some of My Recent Projects</h2>
     <div class="projects-container">
       <div class="project-container project-card">
+        <img src="https://user-images.githubusercontent.com/12488769/147842498-76699680-555b-474b-828a-6013dca86026.png" alt="Visitor Registration" loading="lazy" class="project-pic" />
+        <h3 class="project-title">ServiceNow Visitor Registration</h3>
+        <p class="project-details">
+          SeviceNow task customization to register visitors on campus. Custom table extended from task, custom form, ACL, and scripts ...
+        </p>
+        <a href="https://github.com/bernicetempleman/ServiceNow-Visitor-Registration" target="_blank" class="project-link">Check it Out</a>
+      </div>
+      <div class="project-container project-card">
+        <img src="https://user-images.githubusercontent.com/12488769/147842887-d98638fe-f4d0-4df4-ba3a-edd7a1069f21.png"  alt="Record Producer" loading="lazy" class="project-pic" />
+        <h3 class="project-title">ServiceNow Record Producer, Catalog, SP, and ESC</h3>
+        <p class="project-details">
+          An alternative way to submit simple task requests that do not require approval. A record producer form automatically submits the record...
+        </p>
+        <a href="https://github.com/bernicetempleman/ServiceNow-Record-Producer-Catalog-SP-ESC" target="_blank" class="project-link">Check it Out</a>
+      </div>
+      <div class="project-container project-card">
+        <img src="https://user-images.githubusercontent.com/12488769/147885792-bbef651c-f4a9-4def-bf61-afc65da52e2d.png" alt="Website Portfolio" loading="lazy" class="project-pic" />
+        <h3 class="project-title">Website Portfolio</h3>
+        <p class="project-details">
+          Website Portfolio of recent projects including ServiceNow, Angular, JavaScript, HTML and CSS. This is an ongoing project... 
+        </p>
+        <a href="https://github.com/bernicetempleman/bernicetempleman.github.io" target="_blank" class="project-link">Check it Out</a>
+      </div>
+    </div>
+
+
+    <div class="projects-container">
+      <div class="project-container project-card">
         <img src="https://user-images.githubusercontent.com/12488769/146371342-182f2231-a6ee-4683-a4b1-f995702f8ef7.png" alt="Service Management Template" loading="lazy" class="project-pic" />
         <h3 class="project-title">Service Management Template</h3>
         <p class="project-details">
-          ServiceNow IT Service Management Template project includes customizing the OOB forms for Incident, Problem, Change Management and Service Request to built a standard procedure to be used by any customer in Single Tenant/Multi Tenant instance along with SLA, Notifications, Known Errors and Service Catalog items.
-          This project is a Blueprint which can be used in future for any fresh ServiceNow instances by applying the Update Sets.
+          ServiceNow IT Service Management Template project includes customizing the OOB forms for Incident, Problem, Change Management...
         </p>
         <a href="https://github.com/bernicetempleman/ServiceNow-IT-Service-Management-Template" target="_blank" class="project-link">Check it Out</a>
       </div>
+
       <div class="project-container project-card">
         <img src="https://user-images.githubusercontent.com/12488769/144729888-948fe27a-e890-4ce7-94fd-06d7f6291c75.png" alt="Customer Onboarding" loading="lazy" class="project-pic" />
         <h3 class="project-title">Customer Onboarding: Multitenant </h3>
         <p class="project-details">
-          The Customer Onboarding project includes the entire details for the fresh customer to get onboarded on the multi-tenant instance including Domain, Company, Department, Locations, Users, Groups, Roles, Categorization, Resolution details, & SLA using Import Sets and Transform Maps. It also includes separate Requirement Design documents as per the industry best standards. 
-          Leverages Import Sets and Transform Map.
+          ServiceNow IT Service Management Template project includes customizing the OOB forms for Incident, Problem, Change Management...
         </p>
         <a href="https://github.com/bernicetempleman/Customer-Onboarding-Multitenant" target="_blank" class="project-link">Check it Out</a>
       </div>
+
       <div class="project-container project-card">
         <img src="https://user-images.githubusercontent.com/12488769/144730777-d66e73ba-b467-40df-9a04-ca572b414f56.png" alt="service-catalog" loading="lazy" class="project-pic" />
         <h3 class="project-title">Service Catalog Design</h3>
         <p class="project-details">
-          Service Request Management system provides an intuitive interface with predefined work flows for IT requests to be reliably submitted, routed, approved, monitored and delivered with minimum human interference. Every individuals developed complex Service Catalog using Custom Table, including Catalog Clients scripts/Catalog UI policies, and complex Workflows.
-
-Composite service request, Custom table, Notifications, and 
-Set different stages / set different state of the RITM
+          ServiceNow IT Service Management Template project includes customizing the OOB forms for Incident, Problem, Change Management...
         </p>
         <a href="https://github.com/bernicetempleman/Service-Catalog-Design" target="_blank" class="project-link">Check it Out</a>
       </div>
     </div>
+
+    <div class="projects-container">
+      <div class="project-container project-card">
+        <img src="https://user-images.githubusercontent.com/12488769/144750403-52910c6a-7693-44ff-987b-31a718ee365b.png" alt="Recipe Book App" loading="lazy" class="project-pic" />
+        <h3 class="project-title">Angular Recipe Book App</h3>
+        <p class="project-details">
+          Angular Recipe Book App allows users to Create, Read, Update, and delete recipes...
+        </p>
+        <a href="https://github.com/bernicetempleman/Recipe-Book" target="_blank" class="project-link">Check it Out</a>
+      </div>
+
+      <div class="project-container project-card">
+        <img src="https://user-images.githubusercontent.com/12488769/147879370-e7abdbdc-ee37-4cf2-b7cb-4363b105fae7.png" alt="Angular Demo" loading="lazy" class="project-pic" />
+        <h3 class="project-title">Angular Directives Demo App</h3>
+        <p class="project-details">
+          Angular App demonstrates a pipe, structural directive, attribute directive, one way and two way, service, http client, and  student...
+        </p>
+        <a href="https://github.com/bernicetempleman/Angular-Directives-App" target="_blank" class="project-link">Check it Out</a>
+      </div>
+
+      <div class="project-container project-card">
+        <img src="https://user-images.githubusercontent.com/12488769/147881926-774a8fc4-a663-4f7f-80e9-698b1503c52e.png" alt="Angular Employee Management" loading="lazy" class="project-pic" />
+        <h3 class="project-title">Angular Employee App</h3>
+        <p class="project-details">
+          Angular Employee App demonstrates create, read, update, and delete...
+        </p>
+        <a href="https://github.com/bernicetempleman/Angular-Employee-App" target="_blank" class="project-link">Check it Out</a>
+      </div>
+    </div>
+
+    <div class="projects-container">
+      <div class="project-container project-card">
+        <img src="https://user-images.githubusercontent.com/12488769/147887199-119bee53-d035-40f9-9c9d-a1f8b0cdf3c6.png" alt="SNOW: Web Services REST" loading="lazy" class="project-pic" />
+        <h3 class="project-title">SNOW Web Services REST</h3>
+        <p class="project-details">
+          SeviceNow Web Services REST practical...
+        </p>
+        <a href="https://github.com/bernicetempleman/SNOW-Web-Services-REST" target="_blank" class="project-link">Check it Out</a>
+      </div>
+
+      <div class="project-container project-card">
+        <img src="https://user-images.githubusercontent.com/12488769/147887684-77c0ae18-a0d2-4515-9b0e-6473ee614bc4.png"  alt="SNOW: Web Services SOAP" loading="lazy" class="project-pic" />
+        <h3 class="project-title">SNOW Web Services SOAP</h3>
+        <p class="project-details">
+          SeviceNow Web Services SOAP practical...
+        </p>
+        <a href="https://github.com/bernicetempleman/SNOW-Web-Services-SOAP" target="_blank" class="project-link">Check it Out</a>
+      </div>
+
+      <div class="project-container project-card">
+        <img src="https://user-images.githubusercontent.com/12488769/147857937-d9e8680a-95f0-4b09-a868-11ae973b136e.png" alt="Integration HUB" loading="lazy" class="project-pic" />
+        <h3 class="project-title">Integration HUB</h3>
+        <p class="project-details">
+          ServiceNow Integration HUB... 
+        </p>
+        <a href="https://github.com/bernicetempleman/SNOW-IntegrationHUB" target="_blank" class="project-link">Check it Out</a>
+      </div>
+    </div>
+
+    <div class="projects-container">
+      <div class="project-container project-card">
+        <img src="https://user-images.githubusercontent.com/12488769/147858108-3af446dc-208d-44e8-a250-5c600e1848bd.png" alt="SNOW Flow Designer" loading="lazy" class="project-pic" />
+        <h3 class="project-title">SNOW Flow Designer</h3>
+        <p class="project-details">
+          ServiceNow Flow Designer...
+        </p>
+        <a href="https://github.com/bernicetempleman/SNOW-FLOW-Designer" target="_blank" class="project-link">Check it Out</a>
+      </div>
+
+      <div class="project-container project-card">
+        <img src="https://user-images.githubusercontent.com/12488769/147888072-1dad702d-5dab-494a-9917-995bc5286a84.png" alt="SNOW LDAP" loading="lazy" class="project-pic" />
+        <h3 class="project-title">SNOW LDAP </h3>
+        <p class="project-details">
+          ServiceNow LDAP Configuration...
+        </p>
+        <a href="https://github.com/bernicetempleman/SNOW-LDAP" target="_blank" class="project-link">Check it Out</a>
+      </div>
+
+      <div class="project-container project-card">
+        <img src="https://user-images.githubusercontent.com/12488769/147888250-a368b590-ae1f-42a3-984d-04f88aeb5227.png" alt="SNOW DIscovery MID Server" loading="lazy" class="project-pic" />
+        <h3 class="project-title">SNOW Discovery MID Server</h3>
+        <p class="project-details">
+          ServiceNow Discovery MID server...
+        </p>
+        <a href="https://github.com/bernicetempleman/SNOW-Discovery-MID-Server" target="_blank" class="project-link">Check it Out</a>
+      </div>
+    </div>
+
+    <div class="projects-container">
+      <div class="project-container project-card">
+        <img src="https://user-images.githubusercontent.com/12488769/147860179-9661a5ff-93a8-415e-9124-6f8e2f9bca2a.png" alt="SNOW School Registration Form" loading="lazy" class="project-pic" />
+        <h3 class="project-title">SNOW School Registration Form</h3>
+        <p class="project-details">
+          SNOW School Registration Form...
+        </p>
+        <a href="https://github.com/bernicetempleman/SNOW--School-Registration-Custom-Table-and-Form" target="_blank" class="project-link">Check it Out</a>
+      </div>
+
+      <div class="project-container project-card">
+        <img src="https://user-images.githubusercontent.com/12488769/147877615-20316f01-b75d-4ebb-8dd5-76730f120953.png" alt="SNOW Employee Onboarding" loading="lazy" class="project-pic" />
+        <h3 class="project-title">SNOW Employee Onboarding </h3>
+        <p class="project-details">
+          SNOW Employee Onboarding...
+        </p>
+        <a href="https://github.com/bernicetempleman/SNOW-Employee-Onboarding-Workflow" target="_blank" class="project-link">Check it Out</a>
+      </div>
+
+      <div class="project-container project-card">
+        <img src="https://user-images.githubusercontent.com/12488769/147889337-ff74cdf3-0c77-40ca-949c-4177402025cc.png" alt="SNOW ACL" loading="lazy" class="project-pic" />
+        <h3 class="project-title">SNOW ACL</h3>
+        <p class="project-details">
+          SNOW ACL...
+        </p>
+        <a href="https://github.com/bernicetempleman/SNOW-ACL-Access-Control-List-Demo" target="_blank" class="project-link">Check it Out</a>
+      </div>
+    </div>
+
+    <div class="projects-container">
+      <div class="project-container project-card">
+        <img src="https://user-images.githubusercontent.com/12488769/147858402-6745891a-a127-4e8d-a1b7-fd4cc3e19227.png" alt="SNOW ATF" loading="lazy" class="project-pic" />
+        <h3 class="project-title">SNOW ATF</h3>
+        <p class="project-details">
+          ServiceNow Automated Test Framework...
+        </p>
+        <a href="https://github.com/bernicetempleman/SNOW-ATF-Automated-Test-Framework" target="_blank" class="project-link">Check it Out</a>
+      </div>
+
+      <div class="project-container project-card">
+        <img src="https://user-images.githubusercontent.com/12488769/147859074-2d8f4e2e-4d8b-40bf-a660-3e7a43eddc64.png" alt="SNOW Notification" loading="lazy" class="project-pic" />
+        <h3 class="project-title">SNOW Notifications</h3>
+        <p class="project-details">
+          ServiceNow Notifications, Events and Business Rules...
+        </p>
+        <a href="https://github.com/bernicetempleman/SNOW-Notifications" target="_blank" class="project-link">Check it Out</a>
+      </div>
+
+      <div class="project-container project-card">
+        <img src="https://user-images.githubusercontent.com/12488769/147860136-8681cdf9-d9e7-44fd-8c56-3ece022bba55.png" alt="SNOW SLA" loading="lazy" class="project-pic" />
+        <h3 class="project-title">SNOW SLA</h3>
+        <p class="project-details">
+          ServiceNow Service Level Agreement...
+        </p>
+        <a href="https://github.com/bernicetempleman/SNOW-SLA-Service-Level-Agreement" target="_blank" class="project-link">Check it Out</a>
+      </div>
+    </div>
+
+    
+
+
+      <!-- -->
+    <div class="projects-container">
+      <div class="project-container project-card">
+        <img src="https://user-images.githubusercontent.com/12488769/147889536-eaf5b80f-0e9e-4cc5-85e2-d4604f2b7b14.png" alt="SNOW Service Portal" loading="lazy" class="project-pic" />
+        <h3 class="project-title">SNOW Service Portal</h3>
+        <p class="project-details">
+          ServiceNow Service Portal...
+        </p>
+        <a href="https://github.com/bernicetempleman/SNOW-Service-Portal" target="_blank" class="project-link">Check it Out</a>
+      </div>
+      
+      <div class="project-container project-card">
+        <img src="https://user-images.githubusercontent.com/12488769/147889599-7cce126d-995c-4b59-9607-178040d934de.png" alt="App Engine Studio" loading="lazy" class="project-pic" />
+        <h3 class="project-title">SNOW App Engine Studio </h3>
+        <p class="project-details">
+          ServiceNow App Engine Studio...
+        </p>
+        <a href="https://github.com/bernicetempleman/SNOW-App-Engine-Studio" target="_blank" class="project-link">Check it Out</a>
+      </div>
+
+      <div class="project-container project-card">
+        <img src="https://user-images.githubusercontent.com/12488769/147889681-bcb46a05-09e8-4879-8ce5-4cfc00666dc1.png" alt="SNOW CMDB" loading="lazy" class="project-pic" />
+        <h3 class="project-title">SNOW CMDB</h3>
+        <p class="project-details">
+          ServiceNow CMDB...
+        </p>
+        <a href="https://github.com/bernicetempleman/SNOW-CMDB" target="_blank" class="project-link">Check it Out</a>
+      </div>
+    </div>
+
+    <div>
+    <div class="project-container project-card">
+      <img src="https://user-images.githubusercontent.com/12488769/147889769-aa0a3cc0-04a2-4e40-8875-c6570ed215d2.png" alt="SNOW Asset Management" loading="lazy" class="project-pic" />
+      <h3 class="project-title">SNOW Asset Management</h3>
+      <p class="project-details">
+        ServiceNow Asset Management...
+      </p>
+      <a href="https://github.com/bernicetempleman/SNOW-Asset-Mgmt-Life-Cycle" target="_blank" class="project-link">Check it Out</a>
+    </div>
+  </div>
+
+
+
+
+
   </section>
  
     <!-- Footer section -->
