--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
       </div>
     </div>
 
-    <div>
+    <div class="projects-container">
     <div class="project-container project-card">
       <img src="https://user-images.githubusercontent.com/12488769/147889769-aa0a3cc0-04a2-4e40-8875-c6570ed215d2.png" alt="SNOW Asset Management" loading="lazy" class="project-pic" />
       <h3 class="project-title">SNOW Asset Management</h3>
