--- a/index.html
+++ b/index.html
@@ -329,6 +329,14 @@
       </p>
       <a href="https://github.com/bernicetempleman/SNOW-Asset-Mgmt-Life-Cycle" target="_blank" class="project-link">Check it Out</a>
     </div>
+    <div class="project-container project-card">
+      <img src="https://user-images.githubusercontent.com/12488769/148261386-3d0e6173-bbaa-4123-943e-44dab6cdf19e.png" alt="SNOW Interview Questions" loading="lazy" class="project-pic" />
+      <h3 class="project-title">SNOW Interview Questions</h3>
+      <p class="project-details">
+        <pre>ServiceNow Interview Questions...                                             </pre>
+      </p>
+      <a href="https://github.com/bernicetempleman/ServiceNow-Interview-Questions" target="_blank" class="project-link">Check it Out</a>
+    </div>
   </div>
 
 
