--- a/index.html
+++ b/index.html
@@ -333,9 +333,17 @@
       <img src="https://user-images.githubusercontent.com/12488769/148261386-3d0e6173-bbaa-4123-943e-44dab6cdf19e.png" alt="SNOW Interview Questions" loading="lazy" class="project-pic" />
       <h3 class="project-title">SNOW Interview Questions</h3>
       <p class="project-details">
-        <pre>ServiceNow Interview Questions...                                             </pre>
+        ServiceNow Interview Questions...                                            
       </p>
       <a href="https://github.com/bernicetempleman/ServiceNow-Interview-Questions" target="_blank" class="project-link">Check it Out</a>
+    </div>
+       <div class="project-container project-card">
+      <img src="https://user-images.githubusercontent.com/12488769/148263012-836a6ba1-b163-4af1-80b9-2501e151a416.png" alt="SNOW Final Assessment" loading="lazy" class="project-pic" />
+      <h3 class="project-title">SNOW Final Assessment</h3>
+      <p class="project-details">
+        ServiceNow Final Assessment...                                             
+      </p>
+      <a href="https://github.com/bernicetempleman/ServiceNow-Final-Assessment" target="_blank" class="project-link">Check it Out</a>
     </div>
   </div>
 
