--- a/index.html
+++ b/index.html
@@ -347,6 +347,23 @@
     </div>
   </div>
 
+<div class="projects-container">
+    <div class="project-container project-card">
+      <img src="https://user-images.githubusercontent.com/12488769/147889769-aa0a3cc0-04a2-4e40-8875-c6570ed215d2.png" alt="SNOW Reporting" loading="lazy" class="project-pic" />
+      <h3 class="project-title">SNOW Reporting</h3>
+      <p class="project-details">
+        ServiceNow Reporting...
+      </p>
+      <a href="https://github.com/bernicetempleman/SNOW-Reporting" target="_blank" class="project-link">Check it Out</a>
+    </div>
+    <div class="project-container project-card">
+      <img src="https://user-images.githubusercontent.com/12488769/148261386-3d0e6173-bbaa-4123-943e-44dab6cdf19e.png" alt="SNOW Performance" loading="lazy" class="project-pic" />
+      <h3 class="project-title">SNOW Performance</h3>
+      <p class="project-details">
+        ServiceNow Performance...                                            
+      </p>
+      <a href="https://github.com/bernicetempleman/SNOW-Performance" target="_blank" class="project-link">Check it Out</a>
+  </div>
 
 
 
