--- a/index.html
+++ b/index.html
@@ -363,9 +363,18 @@
         ServiceNow Performance...                                            
       </p>
       <a href="https://github.com/bernicetempleman/SNOW-Performance" target="_blank" class="project-link">Check it Out</a>
+    </div>
+   <div class="project-container project-card">
+      <img src="https://user-images.githubusercontent.com/12488769/148261386-3d0e6173-bbaa-4123-943e-44dab6cdf19e.png" alt="SNOW Development" loading="lazy" class="project-pic" />
+      <h3 class="project-title">SNOW Development and scripts</h3>
+      <p class="project-details">
+        ServiceNow Development and scripts...                                            
+      </p>
+      <a href="https://github.com/bernicetempleman/SNOW-Development-Scripts" target="_blank" class="project-link">Check it Out</a>
+    </div>
   </div>
 
-
+  
 
 
   </section>
