--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <p>
       I am a Software Developer with experience in ServiceNow administration, implementation, and integration.
       Previously I graduated from the Florida Institute of Technology with a master's degree in computer information
-      systems in December 2016. I continued with doctoral studies at Colorado Technical University i Computer Scienceafter my master’s
+      systems in December 2016. I continued with doctoral studies at Colorado Technical University in Computer Science after my master’s
       degree.
       </p>
       <!--
