--- a/index.html
+++ b/index.html
@@ -757,6 +757,14 @@
 
 
   </section>
+  
+    <!-- Scroll to top -->
+    <i class="scroll-up" id="scroll-up"
+      ><img
+        src="assets/icons/icons8-upward-arrow.gif"
+        class="socicon up-arrow"
+        alt=""
+    /></i>
  
     <!-- Footer section -->
   <footer>
