--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
         </p>
         <a href="https://github.com/bernicetempleman/ServiceNow-Visitor-Registration" target="_blank" class="project-link">Check it Out</a>
       </div>
+
       <div class="project-container project-card">
         <img src="https://user-images.githubusercontent.com/12488769/147842887-d98638fe-f4d0-4df4-ba3a-edd7a1069f21.png"  alt="Record Producer" loading="lazy" class="project-pic" />
         <h3 class="project-title">ServiceNow Record Producer, Catalog, SP, and ESC</h3>
@@ -199,13 +200,13 @@
         <a href="https://github.com/bernicetempleman/ServiceNow-Record-Producer-Catalog-SP-ESC" target="_blank" class="project-link">Check it Out</a>
       </div>
       <div class="project-container project-card">
-        <img src="https://user-images.githubusercontent.com/12488769/147885792-bbef651c-f4a9-4def-bf61-afc65da52e2d.png" alt="Website Portfolio" loading="lazy" class="project-pic" />
-        <h3 class="project-title">Website Portfolio</h3>
-        <p class="project-details">
-          Website Portfolio of recent projects including ServiceNow, Angular, JavaScript, HTML and CSS. This is an ongoing project... 
-        </p>
-        <a href="https://github.com/bernicetempleman/bernicetempleman.github.io" target="_blank" class="project-link">Check it Out</a>
-      </div>
+      <img src="https://user-images.githubusercontent.com/12488769/148261386-3d0e6173-bbaa-4123-943e-44dab6cdf19e.png" alt="SNOW Development" loading="lazy" class="project-pic" />
+      <h3 class="project-title">SNOW Development and scripts</h3>
+      <p class="project-details">
+        ServiceNow Development and scripts...                                            
+      </p>
+      <a href="https://github.com/bernicetempleman/SNOW-Development-Scripts" target="_blank" class="project-link">Check it Out</a>
+    </div>
     </div>
 
 
