--- a/index.html
+++ b/index.html
@@ -82,6 +82,55 @@
   </section>
 
   
+    <!-- Skills section -->
+  <section class="skills" id="skills">
+    <h2 class="skill-header">My Top Skills</h2>
+
+    <div class="skills-wrapper">
+      <div class="first-set animate__animated animate__pulse">
+        <img
+          src="assets/icons/PictureJS.jpg"
+          alt=""
+          loading="lazy"
+          class="icon icon-card"
+        />
+        <img
+          src="assets/icons/PictureHTML.jpg"
+          alt=""
+          loading="lazy"
+          class="icon icon-card"
+        />
+        <img
+          src="assets/icons/PictureCSS.jpg"
+          alt=""
+          loading="lazy"
+          class="icon icon-card"
+        />
+      </div>
+
+      <div class="second-set animate__animated animate__pulse">
+        <img
+          src="assets/icons/PictureJava.jpg"
+          alt=""
+          loading="lazy"
+          class="icon icon-card"
+        />
+        <img
+          src="assets/icons/PictureC.jpg"
+          alt=""
+          loading="lazy"
+          class="icon icon-card"
+        />
+        <img
+          src="assets/icons/Picturesql.jpg"
+          alt=""
+          loading="lazy"
+          class="icon icon-card"
+        />
+      </div>
+    </div>
+  </section>
+  
   <!-- Projects section -->
   <section class="projects" id="projects">
     <h2 class="projects-title">Some of My Recent Projects</h2>
