--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <h1>Bernice Templeman</h1>
     <ul class="navigation">
       <li><a href="#more-about" class="nav-link">About</a></li>
+      <li><a href="#skills" class="nav-link">Skills</a></li>
       <li><a href="#projects" class="nav-link">Projects</a></li>
 
     </ul>
