--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <li><a href="#more-about" class="nav-link">About</a></li>
       <li><a href="#skills" class="nav-link">Skills</a></li>
       <li><a href="#projects" class="nav-link">Projects</a></li>
+      <li><a href="#contact" class="nav-link">Connect</a></li>
 
     </ul>
     <button class="burger-menu" id="burger-menu">
@@ -951,9 +952,28 @@
       <a href="https://github.com/bernicetempleman/SNOW-SDLC-Software-Development-Lifecycle" target="_blank" class="project-link">Check it Out</a>
     </div>
   </div>
-
-
   </section>
+                                                                                                                                 
+ <!-- Contact section -->
+<section class="contact" id="contact">
+  <h2 >Connect</h2>
+  <div class="projects-container"> 
+    <div class="project-container project-card"> 
+    <a href="https://www.linkedin.com/in/bernicetempleman/" target="_blank" class="project-link">LinkedIn</a>
+    </div>
+    <div class="project-container project-card"> 
+      <a href="https://www.freecodecamp.org/Bernice_Templeman" target="_blank" class="project-link">FreeCodeCamp</a>
+    </div>
+    <div class="project-container project-card"> 
+      <a href="https://www.codecademy.com/profiles/BerniceTempleman" target="_blank" class="project-link">CodeCademy</a>
+    </div>
+    <div class="project-container project-card"> 
+      <a href="https://www.hackerrank.com/BerniceTempleman" target="_blank" class="project-link">HackerRank</a>
+    </div>
+</div>
+</div>
+</section>
+                                                                                                                                 
   
     <!-- Scroll to top -->
     <i class="scroll-up" id="scroll-up"
