--- a/index.html
+++ b/index.html
@@ -985,8 +985,8 @@
  
     <!-- Footer section -->
   <footer>
-    <p class="copy">&copy; Copyright 2021</p>
-    <p class="copy">
+    <p >&copy; Copyright 2021</p>
+    <p >
       Built by
       <a href="https://www.linkedin.com/in/bernicetempleman/" target="_blank">Bernice Templeman</a>
     </p>
