--- a/index.html
+++ b/index.html
@@ -985,9 +985,9 @@
  
     <!-- Footer section -->
   <footer>
-    <p >&copy; Copyright 2021</p>
-    <p >
-      Built by
+    <p class="footer">&copy; Copyright 2021</p>
+    <p class="footer">
+      Built byclass="footer"
       <a href="https://www.linkedin.com/in/bernicetempleman/" target="_blank">Bernice Templeman</a>
     </p>
   </footer>
