--- a/index.html
+++ b/index.html
@@ -987,7 +987,7 @@
   <footer>
     <p class="footer">&copy; Copyright 2021</p>
     <p class="footer">
-      Built byclass="footer"
+      Built by
       <a href="https://www.linkedin.com/in/bernicetempleman/" target="_blank">Bernice Templeman</a>
     </p>
   </footer>
