--- a/index.html
+++ b/index.html
@@ -985,8 +985,8 @@
  
     <!-- Footer section -->
   <footer>
-    <p class="footer">&copy; Copyright 2021</p>
-    <p class="footer">
+    <p class="footer" style="text-align: center">&copy; Copyright 2021</p>
+    <p class="footer" style="text-align: center">
       Built by
       <a href="https://www.linkedin.com/in/bernicetempleman/" target="_blank">Bernice Templeman</a>
     </p>
