--- a/index.html
+++ b/index.html
@@ -108,6 +108,12 @@
           loading="lazy"
           class="icon icon-card"
         />
+        <img
+          src="assets/icons/angular.png"
+          alt=""
+          loading="lazy"
+          class="icon icon-card"
+        />
       </div>
 
       <div class="second-set animate__animated animate__pulse">
