--- a/index.html
+++ b/index.html
@@ -162,16 +162,16 @@
         </p>
         <a href="https://github.com/bernicetempleman/ResponsiveWebDesign-Cat-App" target="_blank" class="project-link">Check it Out</a>
       </div>
-        <!--
+        
       <div class="project-container project-card">
-        <img src="https://user-images.githubusercontent.com/12488769/148261386-3d0e6173-bbaa-4123-943e-44dab6cdf19e.png" alt="JSON" loading="lazy" class="project-pic" />
-        <h3 class="project-title">JSON</h3>
+        <img src="https://user-images.githubusercontent.com/12488769/149803718-8506e565-0a99-4819-a4eb-38fc22cd147c.png" alt="Markers" loading="lazy" class="project-pic" />
+        <h3 class="project-title">Markers</h3>
         <p class="project-details">
-          JSON... 
+          Markers App using HTML and CSS... 
         </p>
-        <a href="https://github.com/bernicetempleman/SNOW-JavaScript-JSON" target="_blank" class="project-link">Check it Out</a>
+        <a href="https://github.com/bernicetempleman/ResponsiveWebDesign-Markers" target="_blank" class="project-link">Check it Out</a>
       </div>
--->
+
     </div>
     
       <div class="projects-container">
