--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
          <div class="projects-container">
       <div class="project-container project-card">
         <img src="https://user-images.githubusercontent.com/12488769/149832635-2035bcec-e1d1-4084-8d27-34173b6c7a33.png" alt="Registration Form" loading="lazy" class="project-pic" />
-        <h3 class="project-title">Fegistration Form</h3>
+        <h3 class="project-title">Registration Form</h3>
         <p class="project-details">
           Registration Form using HTML and CSS ...
         </p>
