--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   <nav>
     <h1>Bernice Templeman</h1>
     <ul class="navigation">
-      <li><a href="#more-about" class="nav-link">About</a></li>
+      <li><a href="#about" class="nav-link">About</a></li>
+      <li><a href="#more-about" class="nav-link">More About Me</a></li>
       <li><a href="#skills" class="nav-link">Skills</a></li>
       <li><a href="#projects" class="nav-link">Projects</a></li>
       <li><a href="#contact" class="nav-link">Connect</a></li>
@@ -33,14 +34,28 @@
       <ion-icon class="bars" name="menu-outline"></ion-icon>
     </button>
   </nav>
+  
+    <!-- Hero Section -->
+  <section class="hero" id="about">
+    <img
+      src="assets/images/Bernice1.jpg"
+      alt="bernice-templeman"
+      loading="lazy"
+      class="hero-img"
+    />
+    <div class="bio animate__animated animate__shakeX">
+      <h2 class="bio-title">About Me</h2>
+      <p class="bio-text">
+        Experienced Software Engineer, Senior Systems Analyst, Technical Support Engineer, Computer Programmer, Linux, and
+      Unix System Administrator.
+      </p>
+    </div>
+  </section>
+  
 
   <!-- More about -->
   <section class="more-about" id="more-about">
     <h2>About Me</h2>
-    <p>
-      Experienced Software Engineer, Senior Systems Analyst, Technical Support Engineer, Computer Programmer, Linux, and
-      Unix System Administrator.
-    </p>
     <p>
       I am a Software Developer with experience in ServiceNow administration, implementation, and integration.
       Previously I graduated from the Florida Institute of Technology with a master's degree in computer information
