--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
   <!-- More about -->
   <section class="more-about" id="more-about">
-    <h2><More About Me</h2>
+    <h2>More About Me</h2>
     <p>
       I am a Software Developer with experience in ServiceNow administration, implementation, and integration.
       Previously I graduated from the Florida Institute of Technology with a master's degree in computer information
