--- a/index.html
+++ b/index.html
@@ -36,13 +36,15 @@
   </nav>
   
     <!-- Hero Section -->
-  <section class="hero" id="about">
+  <section class="hero" id="aboutpic">
     <img
       src="assets/images/Bernice1.jpg"
       alt="bernice-templeman"
       loading="lazy"
       class="hero-img"
     />
+     </section>
+  <section class="hero" id="about">
     <div class="bio animate__animated animate__shakeX">
       <h2 class="bio-title">About Me</h2>
       <p class="bio-text">
