--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </nav>
   
     <!-- Hero Section -->
-  <section class="hero" id="aboutpic">
+  <section class="hero" id="about">
     <img
       src="assets/images/Bernice1.jpg"
       alt="bernice-templeman"
@@ -44,7 +44,9 @@
       class="hero-img"
     />
      </section>
-  <section class="hero" id="about">
+  
+  
+  <section class="hero2" id="about2">
     <div class="bio animate__animated animate__shakeX">
       <h2 class="bio-title">About Me</h2>
       <p class="bio-text">
