--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     />
      </section>
   
-  
+    <!--
   <section class="hero2" id="about2">
     <div class="bio animate__animated animate__shakeX">
       <h2 class="bio-title">About Me</h2>
@@ -55,10 +55,17 @@
       </p>
     </div>
   </section>
-  
+  -->
 
   <!-- More about -->
   <section class="more-about" id="more-about">
+    
+     <h2 class="bio-title">About Me</h2>
+      <p class="bio-text">
+        Experienced Software Engineer, Senior Systems Analyst, Technical Support Engineer, Computer Programmer, Linux, and
+      Unix System Administrator.
+      </p>
+    
     <h2>More About Me</h2>
     <p>
       I am a Software Developer with experience in ServiceNow administration, implementation, and integration.
