--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
       src="assets/images/Bernice1.jpg"
       alt="bernice-templeman"
       loading="lazy"
-      class="hero-img"
+      class="hero-img" 
+      height="23.5rem"
+      width="23.5rem"
     />
      </section>
   
