--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- Hero Section -->
   <section class="hero" id="about">
     <img
-      src="assets/images/Bernice1.jpg"
+      src="assets/images/Picture1.png"
       alt="bernice-templeman"
       loading="lazy"
       class="hero-img" 
@@ -64,10 +64,12 @@
   
     
     <h2>More About Me</h2>
+    <!--
        <p class="bio-text">
         Experienced Software Engineer, Senior Systems Analyst, Technical Support Engineer, Computer Programmer, Linux, and
       Unix System Administrator.
       </p>
+-->
     <p>
       I am a Software Developer with experience in ServiceNow administration, implementation, and integration.
       Previously I graduated from the Florida Institute of Technology with a master's degree in computer information
