--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   
     <!-- Hero Section -->
   <section class="hero" id="about">
+        <!--
     <img
       src="assets/images/Picture1.png"
       alt="bernice-templeman"
@@ -45,10 +46,11 @@
       height="23.5rem"
       width="50.5rem"
     />
+-->
      </section>
   
-    <!--
-  <section class="hero2" id="about2">
+
+  <section class="hero2" id="about">
     <div class="bio animate__animated animate__shakeX">
       <h2 class="bio-title">About Me</h2>
       <p class="bio-text">
@@ -57,7 +59,7 @@
       </p>
     </div>
   </section>
-  -->
+
 
   <!-- More about -->
   <section class="more-about" id="more-about">
